@@ -11,6 +11,10 @@
    - mouring@cvs.openbsd.org 2001/05/08 19:45:25
      [misc.c misc.h scp.c sftp.c]
      Use addargs() in sftp plus some clean up of addargs().  OK Markus
+   - markus@cvs.openbsd.org 2001/05/06 21:45:14
+     [clientloop.c]
+     use atomicio for flushing stdout/stderr bufs. thanks to 
+     jbw@izanami.cee.hw.ac.uk
  - (bal) UseLogin patch for Solaris/UNICOS.  Patch by Wayne Davison 
    <wayne@blorf.net>
  - (bal) ./configure support to disable SIA on OSF1.  Patch by
@@ -5375,4 +5379,4 @@
  - Wrote replacements for strlcpy and mkdtemp
  - Released 1.0pre1
 
-$Id: ChangeLog,v 1.1210 2001/05/08 20:42:28 mouring Exp $
+$Id: ChangeLog,v 1.1211 2001/05/08 23:58:37 mouring Exp $
